# CS403

./: .gitmodules  README.md
.gitignore/: .gitignore
kinetic_workspace/: .rosinstall  .rosinstall.bak  setup.sh
kinetic_workspace/cs403/compsci403_assignment2/: ._CMakeLists.txt  COMPSCI403Depth.bag  kinetic_workspace
kinetic_workspace/cs403/compsci403_assignment3/: ._msg  ._srv  CMakeLists.txt
kinetic_workspace/cs403/compsci403_assignment4/: ._CMakeLists.txt  ._Makefile  ._include  ._lib  ._manifest.xml  ._msg  ._robot_sim_viewer.rviz  ._src  ._srv  CMakeLists.txt  mysimviewer.rviz
kinetic_workspace/cs403/compsci403_assignment4/include/: ._compsci403_assignment4  assignment4.h
kinetic_workspace/cs403/compsci403_assignment4/msg/: ._ObstacleMsg.msg
kinetic_workspace/cs403/compsci403_assignment4/msg_gen/cpp/include/compsci403_assignment4/: ObstacleMsg.h
kinetic_workspace/cs403/compsci403_assignment4/src/: ._assignment4.cpp  assignment4.cpp  assignment4.h  assignment4_tester.cpp
kinetic_workspace/cs403/compsci403_assignment4/srv/: ._CheckPointSrv.srv  ._GetCommandVelSrv.srv  ._GetFreePathSrv.srv
kinetic_workspace/cs403/compsci403_assignment4/srv_gen/cpp/include/compsci403_assignment4/: CheckPointSrv.h  GetCommandVelSrv.h  GetFreePathSrv.h
kinetic_workspace/cs403/compsci403_assignment4/srv_gen/lisp/: _package.lisp  compsci403_assignment4-srv.asd
kinetic_workspace/cs403/compsci403_assignment4/test/: utest.cpp
kinetic_workspace/cs403/compsci403_assignment5/: ._CMakeLists.txt  ._Makefile  ._assignment5_Part6_1.bag  (+10 more)
kinetic_workspace/sandbox/: params.yaml
(+79 files in other folders)
